# PriceScraper

./: .gitignore  Cargo.toml  config.json  config.json.example  database_manager.py  main.py  manager.py  requirements.txt
cdkeys/: cdkeys.py
common/: product_info.py  scraper.py
config/: config.py
database/: accounts_database_manager.py  data.sql  database_manager.py  product_database_manager.py  products.sql
notifiers/: discord.py
scrapers/: cdkeys.py  green_man_gaming.py
src/: logger.rs  main.rs  notifications.rs  scraper.rs  sites.rs
src/db/: db.rs  ubuntu@pricescraper.tdmd.co.uk
src/notifications/: discord.rs
src/sites/: cdkeys.rs
src/sites/cdkeys/: import.rs  scrape.rs
